<resources>
    <string name="app_name">Watch with FritzBox</string>
    <string name="rich_input_label" translatable="false">Watch with FritzBox</string>
    <string name="rich_input_setup_title">Live Channels</string>
    <string name="rich_input_setup_wait">Just a second...</string>
    <string name="not_tv_title">Not a TV?</string>
    <string name="not_tv_msg">This app is made for Android TV and Fire TV. Devices with no remote controls cannot use this app properly.</string>
    <string name="setup_welcome_title">Welcome to \nWatch\u00A0with\u00A0FritzBox</string>
    <string name="setup_welcome_subtitle">Get the most out of your DVB-C tuner</string>
    <string name="setup_welcome_epg_teaser">See what\'s on now and coming up next</string>
    <string name="setup_welcome_hbbtv_teaser">Use VOD services provided by the channel operator</string>
    <string name="setup_welcome_tv_title">TV</string>
    <string name="setup_welcome_tv_teaser">Watch all your favorite channels for free</string>
    <string name="setup_ip_address_hint">IP address of FritzBox</string>
    <string name="setup_ip_address_title">Setup</string>
    <string name="setup_ip_address_text">Please enter the IP address of your FritzBox or select from the list to continue.</string>
    <string name="setup_ip_continue_button">Continue</string>
    <string name="setup_ip_upnp_no_device">No device found</string>
    <string name="setup_variant_dvbc">DVB-C search</string>
    <string name="setup_variant_dvbc_description">Searches for all available cable channels. This can find channels that otherwise would not be found (even pay tv).</string>
    <string name="setup_variant_fritzbox">FritzBox search</string>
    <string name="setup_variant_fritzbox_description">Retrieve channel list from FritzBox</string>
    <string name="setup_variant_title">Channel source</string>
    <string name="setup_variant_subtitle">How would you like to search for channels?</string>
    <string name="setup_searching_title">Channel search</string>
    <string name="setup_searching_sd">Searching SD channels...</string>
    <string name="setup_searching_hd">Searching HD channels...</string>
    <string name="setup_searching_radio">Searching radio stations...</string>
    <string name="setup_searching_other">Searching other channels...</string>
    <string name="setup_search_sd_result">%d SD channels found</string>
    <string name="setup_search_hd_result">%d HD channels found</string>
    <string name="setup_search_radio_result">%d radio stations found</string>
    <string name="setup_search_other_result">%d other channels found</string>
    <string name="setup_search_error">Channel search failed. Please try again.</string>
    <string name="setup_search_error_connect">Contacting FritzBox failed. Please try again.</string>
    <string name="setup_search_error_not_supported_title">Unsupported FritzBox</string>
    <string name="setup_search_error_not_supported_msg">Your FritzBox does not seem compatible with this app. Please check if the model name of your FritzBox ends with \'Cable\'. Proceed anyway?</string>
    <string name="setup_search_error_not_supported_continue">Continue</string>
    <string name="setup_search_error_not_supported_abort">Cancel</string>
    <string name="setup_search_dvb_error">Couldn\'t find any tunable frequencies. Try FritzBox search instead!</string>
    <string name="setup_search_no_back">You can\'t go back to the previous step!</string>
    <string name="setup_order_title">Channel order</string>
    <string name="setup_order_description">The channel list is currently unsorted. You can manually change the order later.</string>
    <string name="setup_order_yes_online">Online presort</string>
    <string name="setup_order_yes_online_subtitle">Applies a default channel order by contacting a third-party server.</string>
    <string name="setup_order_yes_lcn">Provider sort (LCN)</string>
    <string name="setup_order_yes_lcn_subtitle">Choose this if you\'re unsure. This will use the channel order provided by your TV provider.</string>
    <string name="setup_order_no">Keep as is</string>
    <string name="setup_order_error">There was an error while ordering channels. Aborted.</string>
    <string name="setup_gesture_up">Channel +</string>
    <string name="setup_gesture_down">Channel -</string>
    <string name="setup_gesture_left">Channel list</string>
    <string name="setup_gesture_right">EPG / Settings</string>
    <string name="setup_gesture_continue">Click to continue</string>
    <string name="setup_richtv_error">Could not tell system to read all channels :/ Please try again later.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_reorder_channels">Reorder channels</string>
    <string name="settings_hardware_acceleration">HW Acceleration</string>
    <string name="settings_hardware_acceleration_disable">Disable</string>
    <string name="settings_hardware_acceleration_auto">Enable (Auto)</string>
    <string name="settings_hardware_acceleration_force">Enable (Force)</string>
    <string name="settings_open_hbbtv">HbbTV</string>
    <string name="settings_hbbtv_enable">Enable</string>
    <string name="settings_hbbtv_disable">Disable</string>
    <string name="settings_hbbtv_info">HbbTV available</string>
    <string name="settings_reorder_channels_move">Move up or down to change the position of this channel. Press OK to confirm.</string>
    <string name="settings_reorder_channels_select">Select the channel that you want to move</string>
    <string name="settings_reorder_channels_webserver_info">or visit %s in your web browser</string>
    <string name="settings_reorder_channels_import">Import from another tv</string>
    <string name="settings_open_epg">EPG</string>
    <string name="settings_open_teletext">Teletext</string>
    <string name="settings_reset_app">Reset app data</string>
    <string name="settings_reset_confirm">Confirm</string>
    <string name="settings_reset_cancel">Cancel</string>
    <string name="settings_aspect_ratio_auto">Automatic</string>
    <string name="settings_deinterlace">Deinterlace</string>
    <string name="settings_deinterlace_disable">Disable</string>
    <string name="settings_deinterlace_mode_auto">Automatic</string>
    <string name="settings_deinterlace_mode_discard">Discard mode</string>
    <string name="settings_deinterlace_mode_blend">Blend mode</string>
    <string name="settings_deinterlace_mode_mean">Mean mode</string>
    <string name="settings_deinterlace_mode_bob">Bob mode</string>
    <string name="settings_deinterlace_mode_linear">Linear mode</string>
    <string name="settings_deinterlace_mode_x">X mode</string>
    <string name="settings_deinterlace_mode_yadif">Yadif mode</string>
    <string name="settings_deinterlace_mode_yadifx2">Yadif2x mode</string>
    <string name="settings_deinterlace_mode_phosphor">Phosphor mode</string>
    <string name="settings_deinterlace_mode_ivtc">Ivtc mode</string>
    <string name="settings_audio_delay">Audio delay</string>
    <string name="settings_audio_delay_value">Audio delay %s</string>
    <string name="settings_audio_delay_plus">Delay +</string>
    <string name="settings_audio_delay_minus">Delay -</string>
    <string name="playback_title">Playback</string>
    <string name="radio_running">Listening to radio</string>
    <string name="ca_description">The video and audio feed of this channel is encrypted using the following conditional access systems:\n%s\nThis app can\'t play protected content!</string>
    <string name="no_audio_tracks">No audio tracks</string>
    <string name="no_subtitle_tracks">No subtitles available</string>
    <string name="subtitles">Subtitles</string>
    <string name="pip">Picture in Picture</string>
    <string name="audio_tracks">Audio tracks</string>
    <string name="video_aspect">Aspect ratio</string>
    <string name="audio_tracks_desc">Choose an audio track</string>
    <string name="preference_file_key" translatable="false">saves</string>
    <string name="hbbtv_info">HbbTV (Red-Button) combines TV with interactive online content. Press and hold the Right button while watching TV to show the color keys.</string>
    <string name="epg_no_program">No EPG info</string>
    <string name="epg_starting_from">from %s</string>
    <string name="epg_until">until %s</string>
    <string name="epg_no_program_load_info">Watch this channel for a few minutes to receive EPG data</string>
    <string name="epg_error_fetching_data">Unable to display content. Please try again later.</string>
    <string name="epg_loading_channels">Loading channel %d / %d</string>
    <string name="epg_loading_channels_wait">Just a second…</string>
    <string name="epg_age_from">ages %d+</string>
    <string name="epg_event_category_movie">Movie/Drama</string>
    <string name="epg_event_category_news">News</string>
    <string name="epg_event_category_show">Show</string>
    <string name="epg_event_category_sports">Sports</string>
    <string name="epg_event_category_children">Kids</string>
    <string name="epg_event_category_music">Music</string>
    <string name="epg_event_category_culture">Arts / Culture</string>
    <string name="epg_event_category_social">Social</string>
    <string name="epg_event_category_education">Education</string>
    <string name="epg_event_category_leisure">Leisure</string>
    <string name="epg_event_category_movie_detective">Movie (detective, thriller)</string>
    <string name="epg_event_category_movie_adventure">Movie (adventure, western, war)</string>
    <string name="epg_event_category_movie_sf">Movie (SciFi, fantasy, horror)</string>
    <string name="epg_event_category_movie_comedy">Movie (comedy)</string>
    <string name="epg_event_category_movie_soap">Movie (soap, melodrama, folkloric)</string>
    <string name="epg_event_category_movie_romance">Movie (romance)</string>
    <string name="epg_event_category_movie_classical">Movie (serious, classical, religious, historical, drama)</string>
    <string name="epg_event_category_movie_adult">Movie (adult)</string>
    <string name="epg_event_category_news_weather">Weather news</string>
    <string name="epg_event_category_news_magazine">News magazine</string>
    <string name="epg_event_category_news_documentary">News (documentary)</string>
    <string name="epg_event_category_news_discussion">News (discussion, interview, debate)</string>
    <string name="epg_event_category_show_quiz">Quiz show</string>
    <string name="epg_event_category_show_variety">Variety show</string>
    <string name="epg_event_category_show_talk">Talk show</string>
    <string name="epg_event_category_sports_events">Sports events</string>
    <string name="epg_event_category_sports_magazine">Sports magazines</string>
    <string name="epg_event_category_sports_football">Sports (football, soccer)</string>
    <string name="epg_event_category_sports_tennis">Sports (tennis, squash)</string>
    <string name="epg_event_category_sports_team">Team sports (excluding football)</string>
    <string name="epg_event_category_sports_athletics">Sports (athletics)</string>
    <string name="epg_event_category_sports_motor">Motor sports</string>
    <string name="epg_event_category_sports_water">Water sports</string>
    <string name="epg_event_category_sports_winter">Winter sports</string>
    <string name="epg_event_category_sports_equestrian">Equestrian sports</string>
    <string name="epg_event_category_sports_martial">Martial sports</string>
    <string name="epg_event_category_children_preschool">Preschool children</string>
    <string name="epg_event_category_children_0614">Kids 6 to 14 yrs</string>
    <string name="epg_event_category_children_1016">Kids 10 to 16 yrs</string>
    <string name="extra_key_green">Green</string>
    <string name="extra_key_yellow">Yellow</string>
    <string name="extra_key_red">Red</string>
    <string name="extra_key_blue">Blue</string>
</resources>