<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/overlay_extra_keys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/extra_key_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_key_red"
                android:focusable="true"
                android:nextFocusRight="@string/extra_key_green"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/extra_key_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_key_green"
                android:focusable="true"
                android:nextFocusRight="@string/extra_key_yellow"
                android:nextFocusLeft="@string/extra_key_red"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/extra_key_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_key_yellow"
                android:focusable="true"
                android:nextFocusRight="@string/extra_key_blue"
                android:nextFocusLeft="@string/extra_key_green"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/extra_key_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_key_blue"
                android:focusable="true"
                android:nextFocusLeft="@string/extra_key_yellow"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>