<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setup_ip_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_ip_address_title"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/setup_ip_address_text"
            android:textColor="#fff"
            android:fontFamily="@font/ibmplexsans" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/setup_ip_address_input"
            android:layout_width="match_parent"
            android:maxWidth="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/setup_ip_address_hint"
            android:textColorHint="#fff"
            app:boxStrokeColor="#fff"
            app:boxStrokeWidth="2px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_ip_address_input_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:lines="1"
                android:singleLine="true"
                android:inputType="text"
                android:text="192.168.178.1"
                android:textColor="#fff"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="200dp"
        android:background="@android:color/white"/>

    <ViewAnimator
        android:id="@+id/devices_view_animator"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        android:layout_width="450dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_ip_upnp_no_device"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:overScrollMode="never"
            android:paddingVertical="32dp"
            android:clipToPadding="false"
            tools:listitem="@layout/overlay_settings_item"
            tools:itemCount="2"
            />

    </ViewAnimator>

</LinearLayout>