<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_ip_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#181725">

    <TextView
        android:id="@+id/setup_ip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/setup_ip_address_title"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/setup_ip_card"
        app:layout_constraintStart_toStartOf="@+id/setup_ip_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/setup_ip_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#2a2939"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:paddingHorizontal="12dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_ip_address_text"
                android:textColor="#fff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_ip_address_input"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/setup_ip_address_hint"
                android:textColorHint="#fff"
                app:boxStrokeColor="#fff"
                app:boxStrokeWidth="2px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_ip_address_input_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines = "1"
                    android:lines="1"
                    android:singleLine="true"
                    android:inputType="text"
                    android:text="192.168.178.1"
                    android:textColor="#fff"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/setup_ip_continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/setup_ip_continue_button"
                android:textColor="#2a2939"
                app:cornerRadius="16dp"
                app:elevation="0dp"
                app:icon="@drawable/round_check"
                app:iconTint="#2a2939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setup_ip_address_input" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>